# rewards_agent

./: .env.example  README.md  pyproject.toml
rewards_agent/: run.py  schemas.py
rewards_agent/configs/: deployment.json  llm_configs.json
rewards_agent/utils/: document_processor.py  ollama_embedder.py  quality_assessor.py  reward_calculator.py
